--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" 
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <RelativeLayout
+        android:id="@+id/viewa"
         android:layout_width="match_parent"
         android:layout_height="250dp">
 
@@ -74,16 +75,29 @@
             android:layout_centerInParent="true"
             android:layout_toLeftOf="@+id/imv_shuffle"
             android:background="@drawable/bg_repeat" />
-        <ImageView
-            android:id="@+id/imv_play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_play"/>
+
     </RelativeLayout>
+    <LinearLayout
+        android:id="@+id/viewb"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+        <ListView
+            android:layout_marginTop="250dp"
+            android:id="@+id/lv_Songs"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"></ListView>
 
-    <ListView
-        android:id="@+id/lv_Songs"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"></ListView>
+    </LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/imv_play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:src="@drawable/bg_play"
+        app:layout_anchor="@id/viewa"
+        app:layout_anchorGravity="bottom|right|end"
+        android:clickable="true" />
 
-</LinearLayout>
+
+
+</android.support.design.widget.CoordinatorLayout>
